--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-attrs==24.2.0
-chardet==5.2.0
-colorama==0.4.6
-curlify==2.2.1
-requests==2.32.4
-tableprint==0.9.1
-yarl==1.9.4
+attrs
+chardet
+colorama
+curlify
+requests
+tableprint
+yarl
+requests
+urllib3
+prettytable
